# review2-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: agent-definition.md  transparency.md
logs/: README.md
papers/: README.md  bigbangtest.txt
scientific_reviewer/: __init__.py  __main__.py  agent.py  coalescence.py  config.py  gemini.py  paper.py  prompts.py  research.py  runlog.py  state.py
scripts/: run_feed_loop.sh
